{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 82,
  "lineage": "b8fa3989-4ba2-40d6-9ff0-6ea942e6089c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nic_ubuntu",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/NIC_Ubuntu",
            "location": "westeurope",
            "name": "NIC_Ubuntu",
            "resource_group_name": "NSGs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nic_windows",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/NIC_Windows",
            "location": "westeurope",
            "name": "NIC_Windows",
            "resource_group_name": "NSGs",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "resource_group_default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault",
            "location": "westeurope",
            "name": "ResourceGroupDefault",
            "resource_group_name": "NSGs",
            "security_rule": [],
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1020,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowHTTPS",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowHTTPS",
            "name": "AllowHTTPS",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1021,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowRDP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLServer",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSQLServer",
            "name": "AllowSQLServer",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSH",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/NSGs/providers/Microsoft.Network/networkSecurityGroups/ResourceGroupDefault/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "ResourceGroupDefault",
            "priority": 1010,
            "protocol": "Tcp",
            "resource_group_name": "NSGs",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.resource_group_default",
            "azurerm_resource_group.nsgs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpnGatewayPublicIp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/core/providers/Microsoft.Network/publicIPAddresses/vpnGatewayPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vpnGatewayPublicIp",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "core",
            "sku": "Basic",
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "GatewaySubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/core/providers/Microsoft.Network/virtualNetworks/core/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "core",
            "virtual_network_name": "core"
          },
          "depends_on": [
            "azurerm_resource_group.core",
            "azurerm_virtual_network.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dev",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/core/providers/Microsoft.Network/virtualNetworks/core/subnets/dev",
            "name": "dev",
            "resource_group_name": "core",
            "virtual_network_name": "core"
          },
          "depends_on": [
            "azurerm_resource_group.core",
            "azurerm_virtual_network.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "training",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/core/providers/Microsoft.Network/virtualNetworks/core/subnets/training",
            "name": "training",
            "resource_group_name": "core",
            "virtual_network_name": "core"
          },
          "depends_on": [
            "azurerm_resource_group.core",
            "azurerm_virtual_network.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "core",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "1.1.1.1",
              "1.0.0.1"
            ],
            "id": "/subscriptions/bb1fc0b9-b4b7-4dba-a8db-d8b6e3e439d7/resourceGroups/core/providers/Microsoft.Network/virtualNetworks/core",
            "location": "westeurope",
            "name": "core",
            "resource_group_name": "core",
            "tags": {
              "env": "training",
              "source": "citadel"
            }
          },
          "depends_on": [
            "azurerm_resource_group.core"
          ]
        }
      ]
    }
  ]
}